Implementation of initial helper classes
Adds implementations for Process and Environment
required to port from the python cache-tidy.py
to the C++ based, native tool.

--- a/.license-tools-config.json
+++ b/.license-tools-config.json
@@ -1,14 +1,15 @@
 {
   "author": {
-    "from_git": true
+    "from_git": true,
+    "years": [
+      2022
+    ]
   },
   "license": "Apache-2.0",
   "exclude": [
     "^\\.[^/]+",
     "/\\.[^/]+",
-    "xdispatch2.sublime-project",
     "README.md",
-    "LICENSE",
-    ".*\\.rc"
+    "LICENSE"
   ]
 }
