--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,19 @@
 {
   "cmake.buildDirectory": "${workspaceFolder}/build/clang-ninja-debug",
-  "cmake.ctest.parallelJobs": 1
+  "cmake.ctest.parallelJobs": 1,
+  "files.associations": {
+    "__config": "cpp",
+    "__hash_table": "cpp",
+    "__tree": "cpp",
+    "bitset": "cpp",
+    "set": "cpp",
+    "filesystem": "cpp",
+    "locale": "cpp",
+    "sstream": "cpp",
+    "type_traits": "cpp",
+    "typeinfo": "cpp",
+    "version": "cpp",
+    "algorithm": "cpp",
+    "complex": "cpp"
+  }
 }
