--- a/.drone.yml
+++ b/.drone.yml
@@ -2,11 +2,11 @@
 kind: pipeline
 type: docker
 name: pre-commit
-
 trigger:
-  event:
-    exclude:
+  ref:
+    - refs/heads/master
     - refs/pull/*/head
+    - refs/tags/*
 
 steps:
 - name: check hooks
