Port basic functionality from Python to C++
With this all existing tests can be passed but some more refinements
will need to be done.

--- a/.drone.yml
+++ b/.drone.yml
@@ -112,8 +112,8 @@ name: windows-msvc64
 trigger:
   ref:
     - refs/heads/master
-    - refs/pull/*/head
-    - refs/tags/*
+    #- refs/pull/*/head
+    #- refs/tags/*
 
 platform:
   os: windows
