Use ccache via Conan
Bump ccache to 4.6 provided through Conan and adapt
the test to work with the updated statistics output

--- a/.drone.yml
+++ b/.drone.yml
@@ -60,8 +60,7 @@ steps:
     USER: test_runner
   commands:
     - cd build/clang-ninja-release
-    # disabled until a more recent ccache is available on as recipe
-    # - ctest -j 1 --output-on-failure --stop-on-failure
+    - ctest -j 1 --output-on-failure --stop-on-failure
 
 
 ---
