--- a/config.h.in
+++ b/config.h.in
@@ -24,6 +24,8 @@
 
 #cmakedefine01 LINTER_CACHE_HAVE_POPEN
 
+#cmakedefine01 LINTER_CACHE_HAVE__POPEN
+
 #cmakedefine01 LINTER_CACHE_HAVE_MKTEMP
 
 #cmakedefine01 LINTER_CACHE_HAVE_GETPID
@@ -31,5 +33,23 @@
 #cmakedefine01 LINTER_CACHE_HAVE_UNLINK
 
 #cmakedefine01 LINTER_CACHE_HAVE_STAT
+
+#cmakedefine01 LINTER_CACHE_HAVE_GETENV
+
+#cmakedefine01 LINTER_CACHE_HAVE_SETENV
+
+#cmakedefine01 LINTER_CACHE_HAVE_UNSETENV
+
+#cmakedefine01 LINTER_CACHE_HAVE_SET_ENVIRONMENT_VARIABLE
+
+#cmakedefine01 LINTER_CACHE_HAVE_GET_ENVIRONMENT_VARIABLE
+
+#cmakedefine01 LINTER_CACHE_HAVE_GET_CURRENT_PROCESS_ID
+
+#cmakedefine01 LINTER_CACHE_HAVE_GET_TEMP_FILE_NAME
+
+#cmakedefine01 LINTER_CACHE_HAVE_DELETE_FILE
+
+#cmakedefine01 LINTER_CACHE_HAVE_GET_FILE_ATTRIBUTES
 
 #endif // CONFIG_H_
