Verify a change of parameters is detected
Adding or removing a compiler flag may also impact linting results

--- a/test/clang-tidy/CMakeLists.txt
+++ b/test/clang-tidy/CMakeLists.txt
@@ -30,3 +30,9 @@ add_executable(hello_world
     hello_world.cpp
     main.cpp
 )
+# set(ADD_BOGUS_INCLUDE TRUE)
+if( ADD_BOGUS_INCLUDE )
+    target_include_directories(hello_world
+        PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/bogus
+    )
+endif()
