--- a/config.h.in
+++ b/config.h.in
@@ -32,6 +32,12 @@
 
 #cmakedefine01 LINTER_CACHE_HAVE_UNLINK
 
+#cmakedefine01 LINTER_CACHE_HAVE_EXECVP
+
+#cmakedefine01 LINTER_CACHE_HAVE_PIDFD_OPEN
+
+#cmakedefine01 LINTER_CACHE_HAVE_KEVENT
+
 #cmakedefine01 LINTER_CACHE_HAVE_STAT
 
 #cmakedefine01 LINTER_CACHE_HAVE_GETENV
@@ -51,5 +57,7 @@
 #cmakedefine01 LINTER_CACHE_HAVE_DELETE_FILE
 
 #cmakedefine01 LINTER_CACHE_HAVE_GET_FILE_ATTRIBUTES
+
+#cmakedefine01 LINTER_CACHE_HAVE_CREATE_PROCESS
 
 #endif // CONFIG_H_
