Process: Implement using fork() and poll()
This allows to redirect both stderr and stdout for more granular
control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ check_symbol_exists( mktemp "stdlib.h" LINTER_CACHE_HAVE_MKTEMP )
 check_symbol_exists( getpid "unistd.h" LINTER_CACHE_HAVE_GETPID )
 check_symbol_exists( unlink "unistd.h" LINTER_CACHE_HAVE_UNLINK )
 check_symbol_exists( execvp "unistd.h" LINTER_CACHE_HAVE_EXECVP )
-check_symbol_exists( pidfd_open "sys/types.h" LINTER_CACHE_HAVE_PIDFD_OPEN )
+check_symbol_exists( SYS_pidfd_open "sys/syscall.h" LINTER_CACHE_HAVE_PIDFD_OPEN )
 check_symbol_exists( kevent "sys/event.h" LINTER_CACHE_HAVE_KEVENT )
 check_symbol_exists( stat "sys/stat.h" LINTER_CACHE_HAVE_STAT )
 check_symbol_exists( getenv "stdlib.h" LINTER_CACHE_HAVE_GETENV )
