--- a/config.h.in
+++ b/config.h.in
@@ -58,6 +58,8 @@
 
 #cmakedefine01 LINTER_CACHE_HAVE_GET_FILE_ATTRIBUTES
 
+#cmakedefine01 LINTER_CACHE_HAVE_GET_FULL_PATHNAME
+
 #cmakedefine01 LINTER_CACHE_HAVE_CREATE_PROCESS
 
 #endif // CONFIG_H_
