--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,6 +175,7 @@ if(BUILD_LINTER_CACHE_TESTS AND NOT CONAN_EXPORTED)
     find_program(CLANG_TIDY clang-tidy REQUIRED)
     list(APPEND INTEGRATION_TESTS
         TestClangTidy.test_source_modification
+        TestClangTidy.test_include_modification
         TestClangTidy.test_config_modification
         TestClangTidy.test_param_modification
         TestClangTidy.test_with_extra_args
