Stop using deprecated mktemp
Use the more safe mkstemp instead

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,8 @@ set(CMAKE_CXX_STANDARD 17)
 # check for platform features
 check_symbol_exists( popen "stdio.h" LINTER_CACHE_HAVE_POPEN )
 check_symbol_exists( _popen "stdio.h" LINTER_CACHE_HAVE__POPEN )
-check_symbol_exists( mktemp "stdlib.h" LINTER_CACHE_HAVE_MKTEMP )
+check_symbol_exists( close "unistd.h" LINTER_CACHE_HAVE_CLOSE )
+check_symbol_exists( mkstemp "stdlib.h" LINTER_CACHE_HAVE_MKSTEMP )
 check_symbol_exists( getpid "unistd.h" LINTER_CACHE_HAVE_GETPID )
 check_symbol_exists( unlink "unistd.h" LINTER_CACHE_HAVE_UNLINK )
 check_symbol_exists( execvp "unistd.h" LINTER_CACHE_HAVE_EXECVP )
