--- a/config.h.in
+++ b/config.h.in
@@ -22,11 +22,13 @@
 #ifndef CONFIG_H_
 #define CONFIG_H_
 
+#cmakedefine01 LINTER_CACHE_HAVE_CLOSE
+
 #cmakedefine01 LINTER_CACHE_HAVE_POPEN
 
 #cmakedefine01 LINTER_CACHE_HAVE__POPEN
 
-#cmakedefine01 LINTER_CACHE_HAVE_MKTEMP
+#cmakedefine01 LINTER_CACHE_HAVE_MKSTEMP
 
 #cmakedefine01 LINTER_CACHE_HAVE_GETPID
 
