Force use of ccache version from Conan
This is required so that we have a controlled output for
parsing cache status in the tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,9 @@ if(BUILD_LINTER_CACHE_TESTS AND NOT CONAN_EXPORTED)
 
     add_subdirectory(test/clang-tidy)
     find_program(PYTHON3 python3 python REQUIRED)
-    find_program(CCACHE ccache REQUIRED)
+    unset(CCACHE CACHE)
+    find_package(ccache REQUIRED)
+    find_program(CCACHE ccache PATHS ${ccache_PACKAGE_FOLDER_RELEASE}/bin ${ccache_PACKAGE_FOLDER_DEBUG}/bin NO_DEFAULT_PATH REQUIRED)
     find_program(CLANG_TIDY clang-tidy REQUIRED)
     list(APPEND INTEGRATION_TESTS
         TestClangTidy.test_source_modification
