Fix reading of large lines
The NamedFile implementation was not considering lines not fitting into the buffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ if(BUILD_LINTER_CACHE_TESTS AND NOT CONAN_EXPORTED)
         test/unit/test_CompileCommands.cpp
         test/unit/test_Logging.cpp
         test/unit/test_TemporaryFile.cpp
+        test/unit/test_NamedFile.cpp
         test/unit/test_SavedArguments.cpp
         test/unit/test_StringList.cpp
         test/unit/test_Subprocess.cpp
