ci: Bump lictools

--- a/.gitea/workflows/checks.yaml
+++ b/.gitea/workflows/checks.yaml
@@ -10,8 +10,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+            fetch-depth: 0
       - name: Check hooks
-        run: pre-commit run --all-files --verbose --show-diff-on-failure
+        run: |
+          set -ex
+          # https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
+          pre-commit run \
+            --from-ref ${{ gitea.event.pull_request.base.sha }} \
+            --to-ref ${{ gitea.event.pull_request.head.sha }} \
+            --all-files \
+            --verbose \
+            --show-diff-on-failure
 
   build-and-test:
     strategy:
